python/testData/quickFixes/PyAddImportQuickFixTest/beforeImportBelowFileCommentBlockExceptNoInspectionComment/main.py
# comment 1
# noinspection PyUnresolvedReferences
import b

print(b)
<error descr="Unresolved reference 'a'"><caret>a</error>